bluejay-typegen/tests/validation_cases/error/enums_as_str_not_an_enum.rs
#[bluejay_typegen::typegen([
    scalar Foo

    type Query {
        foo: Foo
    }
], enums_as_str = ["Foo"])]
mod schema {
    type Foo = String;
}

fn main() {}
